Fix wrapping

--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ nav {
 
 .header {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: flex-start;
     gap: 2rem;
     margin-top: var(--nav-height);
